--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
 <p>
   📌 <strong>Acceso Gratis (temporal)</strong><br>
   1. Elige la opción gratuita.<br>
-  2. Invita a tus amigos a los canales oficiales del creador.<br>
-  3. Cada amigo debe enviar una <em>captura de pantalla</em> que demuestre que se unió.<br>
+  2. Invita a tus amigos a seguir los canales oficiales del creador.<br>
+  3. Cada amigo debe enviar una <em>captura de pantalla</em> que demuestre que se esta siguiendo las cuenta.<br>
   4. Una vez que el creador verifique las capturas, tu acceso se activará.<br>
   5. Recuerda: este acceso es <strong>temporal</strong> y puede caducar después de un tiempo.<br><br>
 
@@ -321,8 +321,8 @@
         <h3>Disponible por 1 día</h3>
         <p class="muted">Tarea:</p>
         <ul>
-          <li>Invita <strong>2 amigos</strong> a <strong>suscribirse al canal de TikTok del creador</strong>. Cada uno envía SU captura de suscripción.</li>
-          <li>Invita <strong>2 amigos</strong> a <strong>unirse al canal de WhatsApp del creador</strong>. Cada uno envía SU captura de unión.</li>
+          <li>Invita <strong>2 amigos</strong> a <strong>seguir la cuenta de TikTok del creador</strong>. Cada uno envía SU captura de que esta siguiendo la cuenta.</li>
+          <li>Invita <strong>2 amigos</strong> a <strong>seguir la  cuenta de WhatsApp del creador</strong>. Cada uno envía SU captura de que se unio.</li>
         </ul>
         <p class="muted" style="font-size: 13px; font-style: italic;">Total: 4 capturas de amigos.</p>
         <div class="cta">
@@ -336,7 +336,7 @@
         <h3>Disponible por 3 días</h3>
         <p class="muted">Tarea:</p>
         <ul>
-          <li>Invita <strong>4 amigos</strong> a <strong>suscribirse al canal de TikTok del creador</strong>. Cada uno envía SU captura.</li>
+          <li>Invita <strong>4 amigos</strong> a <strong>seguir la cuenta de TikTok del creador</strong>. Cada uno envía SU captura.</li>
           <li>Invita <strong>4 amigos</strong> a <strong>unirse al canal de WhatsApp del creador</strong>. Cada uno envía SU captura.</li>
         </ul>
         <p class="muted" style="font-size: 13px; font-style: italic;">Total: 8 capturas de amigos.</p>
@@ -351,7 +351,7 @@
         <h3>Disponible por 5 días</h3>
         <p class="muted">Tarea:</p>
         <ul>
-          <li>Invita <strong>6 amigos</strong> a <strong>suscribirse al canal de TikTok del creador</strong>. Cada uno envía SU captura de suscripción.</li>
+          <li>Invita <strong>6 amigos</strong> a <strong>seguir la cuenta de TikTok del creador</strong>. Cada uno envía SU captura .</li>
           <li>Invita <strong>6 amigos</strong> a <strong>unirse al canal de WhatsApp del creador</strong>. Cada uno envía SU captura de unión.</li>
         </ul>
         <p class="muted" style="font-size: 13px; font-style: italic;">Total: 12 capturas de amigos.</p>
@@ -366,7 +366,7 @@
         <h3>Disponible por 7 días</h3>
         <p class="muted">Tarea:</p>
         <ul>
-          <li>Invita <strong>9 amigos</strong> a <strong>suscribirse al canal de TikTok del creador</strong>. Cada uno envía SU captura de suscripción.</li>
+          <li>Invita <strong>9 amigos</strong> a <strong>seguir la cuenta de TikTok del creador</strong>. Cada uno envía SU captura .</li>
           <li>Invita <strong>9 amigos</strong> a <strong>unirse al canal de WhatsApp del creador</strong>. Cada uno envía SU captura de unión.</li>
         </ul>
         <p class="muted" style="font-size: 13px; font-style: italic;">Total: 18 capturas de amigos.</p>
@@ -382,7 +382,7 @@
       <div class="paid card" style="grid-column: 1 / -1;">
         <div>
           <h3>Página permanente</h3>
-          <p>¡Sin tareas! Paga <strong>US$2.90</strong> por PayPal o Yape (Perú) y listo para siempre.</p>
+          <p>¡Sin tareas! Puede pagar <strong>US$2.90</strong> por PayPal o Yape (Perú) y listo tendra permantente la pagina .</p>
         </div>
         <div class="cta" style="margin: 0; width: auto;">
           <button class="btn btn-primary" onclick="openWhatsApp('Pago US$2.90 - página permanente')">Pagar US$2.90 por PayPal o Yape (Perú)</button>
@@ -408,4 +408,5 @@
 </body>
 
 </html>
+
 
